auto publishing updates to notebooks

--- a/ifp_dl.ipynb
+++ b/ifp_dl.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7af26b49",
+   "id": "03282a4e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b45be379",
+   "id": "fc7adaae",
    "metadata": {},
    "source": [
     "# Policy Gradient-Based Optimal Savings"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "680fd571",
+   "id": "600bdd7b",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21177be0",
+   "id": "eea4e568",
    "metadata": {},
    "source": [
     "## Introduction\n",
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79fd7306",
+   "id": "70faaa09",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ddf2be",
+   "id": "d12e4b37",
    "metadata": {},
    "source": [
     "We’ll use the following imports"
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135b16e4",
+   "id": "7d862fff",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c9848a9",
+   "id": "6b2e050a",
    "metadata": {},
    "source": [
     "## Theory\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec1fa9c8",
+   "id": "7d557ac3",
    "metadata": {},
    "source": [
     "### Household problem\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c823434",
+   "id": "04124776",
    "metadata": {},
    "source": [
     "### Lifetime Value and Optimization\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92f0db13",
+   "id": "a1a0070e",
    "metadata": {},
    "source": [
     "### The policy gradient approach\n",
@@ -250,7 +250,7 @@
     "\n",
     "1. Replace $ \\Sigma $ with $ \\{\\sigma(\\cdot, \\theta) \\,:\\, \\theta \\in \\Theta\\} $\n",
     "  where $ \\sigma(\\cdot, \\theta) $ is an ANN with parameter vector $ \\theta $  \n",
-    "1. Replace the objective function with $ M(\\theta) := \\int v_{\\sigma(\\cdot, \\theta)} (a_0) $  \n",
+    "1. Replace the objective function with $ M(\\theta) := v_{\\sigma(\\cdot, \\theta)} (a_0) $  \n",
     "1. Replace $ M $ with a Monte Carlo approximation $ \\hat M $  \n",
     "1. Use gradient ascent to maximize $ \\hat M(\\theta) $ over $ \\theta $.  \n",
     "\n",
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "572e2c11",
+   "id": "ef19d4eb",
    "metadata": {},
    "source": [
     "## Network\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59e91172",
+   "id": "7e8a3427",
    "metadata": {
     "hide-output": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099a5951",
+   "id": "a56f6761",
    "metadata": {},
    "source": [
     "We use a class called `LayerParams` to store parameters representing a single\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a563594",
+   "id": "b53b0505",
    "metadata": {
     "hide-output": false
    },
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa41d586",
+   "id": "8094750f",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using Le Cun\n",
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "649a5667",
+   "id": "406906cc",
    "metadata": {
     "hide-output": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3c696d2",
+   "id": "fba54212",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd280d8d",
+   "id": "6ec85f56",
    "metadata": {
     "hide-output": false
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c741bae",
+   "id": "b7e932d6",
    "metadata": {},
    "source": [
     "Here’s a function to train the network by gradient ascent, given a generic loss\n",
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff36c32",
+   "id": "7e5257ad",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97901ff9",
+   "id": "1783f9d6",
    "metadata": {},
    "source": [
     "## Cake Eating Case\n",
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edeab90b",
+   "id": "117169ad",
    "metadata": {},
    "source": [
     "### Cake eating loss function\n",
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9062a458",
+   "id": "26aef60a",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2044af56",
+   "id": "075cb632",
    "metadata": {},
    "source": [
     "We use CRRA utility."
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d330e7f",
+   "id": "01230fbf",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a387365f",
+   "id": "1d8628e7",
    "metadata": {},
    "source": [
     "Now we provide a function that implements a consumption policy as a neural network, given the\n",
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "748b99ec",
+   "id": "6b9fd9af",
    "metadata": {
     "hide-output": false
    },
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77855087",
+   "id": "42bd30da",
    "metadata": {},
    "source": [
     "The next function approximates lifetime value for the cake eating agent\n",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3884ad5",
+   "id": "5c42f9af",
    "metadata": {
     "hide-output": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "941684fd",
+   "id": "129ce55d",
    "metadata": {},
    "source": [
     "Here’s the loss function we will minimize."
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e55febc3",
+   "id": "cc52e833",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22338bdd",
+   "id": "3b854836",
    "metadata": {},
    "source": [
     "### Train and solve\n",
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2c30478",
+   "id": "e8928720",
    "metadata": {
     "hide-output": false
    },
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c005b880",
+   "id": "40d67daf",
    "metadata": {},
    "source": [
     "We test stability."
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "743affb3",
+   "id": "a0fb9af6",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4a7cff3",
+   "id": "110868c8",
    "metadata": {},
    "source": [
     "We compute the optimal consumption rate and lifetime value from the analytical\n",
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1859fd55",
+   "id": "ff61b254",
    "metadata": {
     "hide-output": false
    },
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e01569c7",
+   "id": "35afb667",
    "metadata": {},
    "source": [
     "Now let’s train the network."
@@ -776,7 +776,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10b742de",
+   "id": "eb88b741",
    "metadata": {
     "hide-output": false
    },
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbcd8a47",
+   "id": "d74abcf1",
    "metadata": {},
    "source": [
     "First we plot the evolution of lifetime value over the epochs."
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b2447cb",
+   "id": "22a5b75f",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bad0f82c",
+   "id": "e646c3bf",
    "metadata": {},
    "source": [
     "Next we compare the learned and optimal policies."
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c29f1fd",
+   "id": "e98e9dcf",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbdba124",
+   "id": "f073004c",
    "metadata": {},
    "source": [
     "### Simulation\n",
@@ -879,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb7e34b5",
+   "id": "d392770f",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53c65556",
+   "id": "17226aa9",
    "metadata": {},
    "source": [
     "Let’s simulate and plot path"
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aef2aea",
+   "id": "30afde4a",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a579ce5",
+   "id": "a6bd45f6",
    "metadata": {},
    "source": [
     "## IFP Model\n",
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "818e28be",
+   "id": "634c1a64",
    "metadata": {},
    "source": [
     "### JAX Implementation\n",
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e34dbd",
+   "id": "4982d077",
    "metadata": {
     "hide-output": false
    },
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6c8758f",
+   "id": "e071c641",
    "metadata": {},
    "source": [
     "### Solving the IID model using the EGM\n",
@@ -1037,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54fed323",
+   "id": "b583bbc8",
    "metadata": {
     "hide-output": false
    },
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cee25371",
+   "id": "e80445b9",
    "metadata": {},
    "source": [
     "Here’s the solver using time iteration:"
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a99b91bc",
+   "id": "104a440d",
    "metadata": {
     "hide-output": false
    },
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "579b53b9",
+   "id": "4c17c797",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the optimal policy:"
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd8a527",
+   "id": "f174ed7b",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "716545cf",
+   "id": "708143a7",
    "metadata": {},
    "source": [
     "Plot the optimal consumption policy:"
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70d0136c",
+   "id": "4b47152d",
    "metadata": {
     "hide-output": false
    },
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7162719e",
+   "id": "082e9ead",
    "metadata": {},
    "source": [
     "### Solving the IID model with DL\n",
@@ -1212,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9ef7e16",
+   "id": "c6eed1c2",
    "metadata": {
     "hide-output": false
    },
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6548be3d",
+   "id": "e52e3887",
    "metadata": {},
    "source": [
     "The loss function is the negation of the expected lifetime value."
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08bbcc76",
+   "id": "e7f6315e",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fe717e1",
+   "id": "8adf6d0c",
    "metadata": {},
    "source": [
     "Now let’s set up and train the network.\n",
@@ -1301,7 +1301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4549d2c",
+   "id": "f3579b7f",
    "metadata": {
     "hide-output": false
    },
@@ -1335,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7600b70",
+   "id": "99e19282",
    "metadata": {},
    "source": [
     "Plot the learning progress."
@@ -1344,7 +1344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d00c4904",
+   "id": "7aacf46e",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f28ff884",
+   "id": "562c54d7",
    "metadata": {},
    "source": [
     "Compare EGM and DL solutions."
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bdb1393",
+   "id": "2deaefc5",
    "metadata": {
     "hide-output": false
    },
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37571b47",
+   "id": "b1f5fff2",
    "metadata": {},
    "source": [
     "The fit is quite good."
@@ -1401,7 +1401,7 @@
   }
  ],
  "metadata": {
-  "date": 1764839050.3938088,
+  "date": 1764848030.4685106,
   "filename": "ifp_dl.md",
   "kernelspec": {
    "display_name": "Python",
