--- a/jax_nn.ipynb
+++ b/jax_nn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "533f0d7f",
+   "id": "82bd5da9",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "996e9005",
+   "id": "8441a19c",
    "metadata": {},
    "source": [
     "# Neural Network Regression with JAX"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21fc93c1",
+   "id": "efb3d35a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8480ac7d",
+   "id": "27334d81",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38698590",
+   "id": "cf053303",
    "metadata": {
     "hide-output": false
    },
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "828b4b97",
+   "id": "91ca1400",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d62791c",
+   "id": "6ed7b837",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dadf9945",
+   "id": "5712a8f8",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8196568",
+   "id": "42e6c95e",
    "metadata": {
     "hide-output": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66b37e3",
+   "id": "a56370f3",
    "metadata": {},
    "source": [
     "## Set Up\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1d2961f",
+   "id": "88bf3999",
    "metadata": {},
    "source": [
     "### Flow\n",
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c05a994a",
+   "id": "b79ba076",
    "metadata": {
     "hide-output": false
    },
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a89b2f0",
+   "id": "39e63813",
    "metadata": {},
    "source": [
     "### Data\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a11e498",
+   "id": "493e4fd3",
    "metadata": {
     "hide-output": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a074990",
+   "id": "653a0aa9",
    "metadata": {},
    "source": [
     "Here’s a plot of the data."
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be46f318",
+   "id": "1e03da1f",
    "metadata": {
     "hide-output": false
    },
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1153959",
+   "id": "aeb0ac7a",
    "metadata": {},
    "source": [
     "## Training with Keras\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ef8b455",
+   "id": "be443b0c",
    "metadata": {
     "hide-output": false
    },
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abc2e842",
+   "id": "65af19aa",
    "metadata": {},
    "source": [
     "Notice that we’ve set the optimizer to use stochastic gradient descent and a\n",
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "696d9f91",
+   "id": "2966f974",
    "metadata": {
     "hide-output": false
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a41115",
+   "id": "f0bd2f11",
    "metadata": {},
    "source": [
     "The next function extracts and visualizes a prediction from the trained model."
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b2821a7",
+   "id": "af24d406",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ccbb794",
+   "id": "0a2df4d9",
    "metadata": {},
    "source": [
     "Let’s run the Keras training:"
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c15054",
+   "id": "a171b4c2",
    "metadata": {
     "hide-output": false
    },
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abdb79f6",
+   "id": "b47efac4",
    "metadata": {},
    "source": [
     "The fit is good and we note the relatively low final MSE."
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e51e9d96",
+   "id": "53dd2b47",
    "metadata": {},
    "source": [
     "## Training with JAX\n",
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8847249b",
+   "id": "a029996e",
    "metadata": {},
    "source": [
     "### Background and set up\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe7271f",
+   "id": "4745604b",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6b79621",
+   "id": "b114ddf1",
    "metadata": {},
    "source": [
     "The following function initializes a single layer of the network using He\n",
@@ -491,7 +491,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e9cdeda",
+   "id": "81e89e98",
    "metadata": {
     "hide-output": false
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddedfa72",
+   "id": "3406e453",
    "metadata": {},
    "source": [
     "The next function builds an entire network, as represented by its parameters, by\n",
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "530f7f96",
+   "id": "dd5ede18",
    "metadata": {
     "hide-output": false
    },
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37a0bf2a",
+   "id": "a72a3c0b",
    "metadata": {},
    "source": [
     "Wait, you say!\n",
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93001f8c",
+   "id": "1384e20a",
    "metadata": {},
    "source": [
     "### Coding the network\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11b1d72a",
+   "id": "daf5e6aa",
    "metadata": {
     "hide-output": false
    },
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e35decd",
+   "id": "c031f051",
    "metadata": {},
    "source": [
     "The function $ f $ is appropriately vectorized, so that we can pass in the entire\n",
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e953f74c",
+   "id": "f20782fe",
    "metadata": {
     "hide-output": false
    },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "991ba3ca",
+   "id": "8d135895",
    "metadata": {},
    "source": [
     "We’ll use its gradient to do stochastic gradient descent.\n",
@@ -639,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5153e450",
+   "id": "7aae5661",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db05ed75",
+   "id": "5ef73ae7",
    "metadata": {},
    "source": [
     "The gradient of `loss_fn` is with respect to the first argument `θ`.\n",
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c67bc5",
+   "id": "bb3f4a7e",
    "metadata": {},
    "source": [
     "### Gradient descent\n",
@@ -686,7 +686,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52dd5082",
+   "id": "8eb782cc",
    "metadata": {
     "hide-output": false
    },
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd38d471",
+   "id": "f1fd1d46",
    "metadata": {},
    "source": [
     "Here `jax.tree.map` understands `θ` and `gradient` as pytrees of the\n",
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5171c82",
+   "id": "1d7dc60a",
    "metadata": {
     "hide-output": false
    },
@@ -753,22 +753,17 @@
     "    Train model using gradient descent.\n",
     "\n",
     "    \"\"\"\n",
-    "    def update(θ, _):\n",
-    "        train_loss = loss_fn(θ, x, y)\n",
-    "        val_loss = loss_fn(θ, x_validate, y_validate)\n",
+    "    def update(_, θ):\n",
     "        θ_new = update_parameters(θ, x, y, config)\n",
-    "        accumulate = train_loss, val_loss\n",
-    "        return θ_new, accumulate\n",
+    "        return θ_new\n",
     "\n",
-    "    θ_final, (training_losses, validation_losses) = jax.lax.scan(\n",
-    "        update, θ, None, length=config.epochs\n",
-    "    )\n",
-    "    return θ_final, training_losses, validation_losses"
+    "    θ_final = jax.lax.fori_loop(0, config.epochs, update, θ)\n",
+    "    return θ_final"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "219d8c04",
+   "id": "6a7ab0af",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -781,35 +776,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e84c6f66",
+   "id": "219e01e0",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
+    "# Reset parameter vector\n",
     "config = Config()\n",
     "param_key = jax.random.PRNGKey(1234)\n",
-    "θ = initialize_network(param_key, config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f264e8ca",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
+    "θ = initialize_network(param_key, config)\n",
+    "\n",
     "# Warmup run to trigger JIT compilation\n",
     "train_jax_model(θ, x_train, y_train, x_validate, y_validate, config)\n",
     "\n",
     "# Reset and time the actual run\n",
     "θ = initialize_network(param_key, config)\n",
     "start_time = time()\n",
-    "θ, training_loss, validation_loss = train_jax_model(\n",
-    "    θ, x_train, y_train, x_validate, y_validate, config\n",
-    ")\n",
+    "θ = train_jax_model(θ, x_train, y_train, x_validate, y_validate, config)\n",
     "θ[0].W.block_until_ready()  # Ensure computation completes\n",
     "jax_runtime = time() - start_time\n",
     "\n",
@@ -821,41 +805,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d3a658d",
+   "id": "abd60065",
    "metadata": {},
    "source": [
     "Despite the simplicity of our implementation, we actually perform slightly better than Keras.\n",
     "\n",
-    "This figure shows MSE across iterations:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c04ff5d8",
-   "metadata": {
-    "hide-output": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "ax.plot(range(len(validation_loss)), validation_loss, label='validation loss')\n",
-    "ax.legend()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f0f35a7",
-   "metadata": {},
-   "source": [
     "Here’s a visualization of the quality of our fit."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ad1b10",
+   "id": "dafd0b02",
    "metadata": {
     "hide-output": false
    },
@@ -872,7 +833,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40293324",
+   "id": "eeefdddf",
    "metadata": {},
    "source": [
     "## JAX plus Optax\n",
@@ -885,7 +846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8eee562",
+   "id": "02fc5cf7",
    "metadata": {},
    "source": [
     "### Optax with SGD\n",
@@ -896,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90528102",
+   "id": "34b3da52",
    "metadata": {
     "hide-output": false
    },
@@ -931,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e3b7dc9",
+   "id": "ecc3db9a",
    "metadata": {},
    "source": [
     "Let’s try running it."
@@ -940,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb540465",
+   "id": "2e25afaa",
    "metadata": {
     "hide-output": false
    },
@@ -968,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e1b2b31",
+   "id": "a6fa1337",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d42be39",
+   "id": "90575007",
    "metadata": {},
    "source": [
     "### Optax with ADAM\n",
@@ -1000,7 +961,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8806ec8",
+   "id": "32464921",
    "metadata": {
     "hide-output": false
    },
@@ -1034,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9de9f2a9",
+   "id": "41388281",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b327b1dd",
+   "id": "a161a40f",
    "metadata": {},
    "source": [
     "Here’s a visualization of the result."
@@ -1070,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afc58fc8",
+   "id": "fb8f3956",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1048,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc2667ae",
+   "id": "2277661f",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -1098,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3903ada3",
+   "id": "59ef866d",
    "metadata": {
     "hide-output": false
    },
@@ -1150,7 +1111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf218ce0",
+   "id": "6e73ab91",
    "metadata": {},
    "source": [
     "All methods achieve similar validation MSE values (around 0.043-0.045).\n",
@@ -1170,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72eded16",
+   "id": "a38228e0",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1178,7 +1139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec923d1b",
+   "id": "0e6d30ef",
    "metadata": {},
    "source": [
     "## Exercise 23.1\n",
@@ -1209,7 +1170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b821836",
+   "id": "c4283ea6",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 23.1](https://jax.quantecon.org/#jax_nn_ex1)\n",
@@ -1224,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f2b82c0",
+   "id": "57a29308",
    "metadata": {
     "hide-output": false
    },
@@ -1268,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78db91f5",
+   "id": "0310324f",
    "metadata": {},
    "source": [
     "**Strategy 2: Deeper Network + Learning Rate Schedule**\n",
@@ -1279,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a48fe09",
+   "id": "de7795be",
    "metadata": {
     "hide-output": false
    },
@@ -1335,7 +1296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fde76fdf",
+   "id": "8700e65a",
    "metadata": {},
    "source": [
     "**Strategy 3: Deeper Network + LR Schedule + L2 Regularization**\n",
@@ -1346,7 +1307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8058da68",
+   "id": "d16cea07",
    "metadata": {
     "hide-output": false
    },
@@ -1416,7 +1377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5fa4d88",
+   "id": "0fd6cd91",
    "metadata": {},
    "source": [
     "**Strategy 4: Baseline + L2 Regularization**\n",
@@ -1427,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1220583",
+   "id": "0227e332",
    "metadata": {
     "hide-output": false
    },
@@ -1493,7 +1454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "685bba16",
+   "id": "4af420b1",
    "metadata": {},
    "source": [
     "**Results Summary**\n",
@@ -1504,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "856806f9",
+   "id": "ab69c7cf",
    "metadata": {
     "hide-output": false
    },
@@ -1549,7 +1510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c8a8e0",
+   "id": "58c04d71",
    "metadata": {},
    "source": [
     "The experimental results reveal several lessons:\n",
@@ -1566,7 +1527,7 @@
   }
  ],
  "metadata": {
-  "date": 1764839050.5902548,
+  "date": 1764848030.663169,
   "filename": "jax_nn.md",
   "kernelspec": {
    "display_name": "Python",
