--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c6598b6",
+   "id": "0cba1d67",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd7d1648",
+   "id": "a3b7c7f0",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "732fcf56",
+   "id": "79f50902",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1383b191",
+   "id": "674688e7",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c765caa5",
+   "id": "9ea2a4dc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ed9df2",
+   "id": "ec4bceae",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7991c4fe",
+   "id": "4d7b59ec",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d450d4b9",
+   "id": "5d0ac8af",
    "metadata": {
     "hide-output": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0951f533",
+   "id": "13b924bc",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee158820",
+   "id": "97ee50fe",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab40095",
+   "id": "cb145037",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2036dff",
+   "id": "6b6755ea",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ead97529",
+   "id": "5edab7a7",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f90e501c",
+   "id": "99632e99",
    "metadata": {},
    "source": [
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8b462ce",
+   "id": "f796d086",
    "metadata": {
     "hide-output": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9d9c2b9",
+   "id": "25b6f5f2",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78cbbc0c",
+   "id": "c1a91237",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c34bfe7",
+   "id": "da9f6238",
    "metadata": {},
    "source": [
     "Let’s try running the code and generating a cross-section."
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c56ff97",
+   "id": "2f2bba45",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7e3cfc1",
+   "id": "6e25501a",
    "metadata": {},
    "source": [
     "We run the function again so we can see the speed without compile time."
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2480a3ef",
+   "id": "53401ff4",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58c51af5",
+   "id": "4fd1e21f",
    "metadata": {},
    "source": [
     "Let’s produce the rank-size plot and check the distribution:"
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1e4243",
+   "id": "48befc95",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3c16534",
+   "id": "a64541e2",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e013936e",
+   "id": "83e70b3e",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.fori_loop`\n",
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86e82aaa",
+   "id": "1e726a43",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c65fd92e",
+   "id": "ada8f5ef",
    "metadata": {},
    "source": [
     "Let’s see if we get any speed gain"
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23e999b7",
+   "id": "f8d3e151",
    "metadata": {
     "hide-output": false
    },
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d109c06e",
+   "id": "2f6ebb22",
    "metadata": {
     "hide-output": false
    },
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7789f09",
+   "id": "51bb5992",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9425b7f1",
+   "id": "43ef1065",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70bc86a6",
+   "id": "27f8cdb6",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7b84431",
+   "id": "9fc2cc62",
    "metadata": {},
    "source": [
     "## Exercise 6.1\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e1501cd",
+   "id": "809480d5",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#kp_ex1)"
@@ -577,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ff3becf",
+   "id": "7ff177e0",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35c0191b",
+   "id": "65a620ea",
    "metadata": {},
    "source": [
     "Here are the run times."
@@ -623,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acb4dd0d",
+   "id": "8b896373",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a61dcdc4",
+   "id": "00a31efd",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca46a538",
+   "id": "1cbb968b",
    "metadata": {},
    "source": [
     "This method might or might not be faster.\n",
@@ -665,7 +665,7 @@
   }
  ],
  "metadata": {
-  "date": 1764839050.659884,
+  "date": 1764848030.7322197,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
