--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5322b1e2",
+   "id": "17ac327c",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de651fe",
+   "id": "1d88771f",
    "metadata": {},
    "source": [
     "\n",
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c29b466",
+   "id": "8c5ddc73",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73bfe2ec",
+   "id": "95b6ef0e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48239f04",
+   "id": "0ec9af49",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8bd7b7",
+   "id": "f2a3fab2",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dedbf4c2",
+   "id": "ca10aff8",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cb50745",
+   "id": "3b58dd2c",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cd70b33",
+   "id": "13711adc",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f938e9c9",
+   "id": "d06b32e4",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "041a631c",
+   "id": "d616b463",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b898df34",
+   "id": "7c937a77",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "712678f3",
+   "id": "0a0944ed",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ec8044",
+   "id": "d62946f1",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36226dd1",
+   "id": "16c1bef6",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66caca4f",
+   "id": "752a8533",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73bb9416",
+   "id": "c5e64592",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0caf2f2c",
+   "id": "8c2250de",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94f9ab45",
+   "id": "d8ed5a1a",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dcccef6",
+   "id": "66831fe4",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba34a21",
+   "id": "0de8281f",
    "metadata": {
     "hide-output": false
    },
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6a452da",
+   "id": "d410a1dd",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a228b89",
+   "id": "8fcd5953",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "140c8633",
+   "id": "a2433d45",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78f4ab27",
+   "id": "0260f03d",
    "metadata": {
     "hide-output": false
    },
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c45c32fc",
+   "id": "fcff244c",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99789b71",
+   "id": "5b47b8de",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "213629e3",
+   "id": "bdbc73d3",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "554f0daa",
+   "id": "c29332ff",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ca5db88",
+   "id": "9ba91bee",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca2d1767",
+   "id": "c4cb31e9",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -732,7 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16465ee8",
+   "id": "b73e0130",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "162d2a13",
+   "id": "0723be6a",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -779,7 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57720203",
+   "id": "860c9bcb",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79471dc4",
+   "id": "bf0a041a",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ff9b018",
+   "id": "dba63afe",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc15447",
+   "id": "7fd88fbd",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -834,7 +834,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce30dc5",
+   "id": "b81d3576",
    "metadata": {
     "hide-output": false
    },
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e47e6b",
+   "id": "22135007",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -873,7 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0af2b320",
+   "id": "536c59b3",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49be71bf",
+   "id": "addfea1e",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -908,7 +908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd9b6179",
+   "id": "7e77ed3e",
    "metadata": {
     "hide-output": false
    },
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d293a4d9",
+   "id": "fcc4ee2c",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0908f6f7",
+   "id": "570e22df",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62ad380",
+   "id": "596b3d9c",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23c025e5",
+   "id": "7021c51b",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "724540cd",
+   "id": "2970f4d1",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41eb4b98",
+   "id": "b2c25133",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37b9c9ae",
+   "id": "a09d3afa",
    "metadata": {
     "hide-output": false
    },
@@ -1024,7 +1024,7 @@
   }
  ],
  "metadata": {
-  "date": 1764839050.709561,
+  "date": 1764848030.7810798,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
