--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d7c8d150",
+   "id": "96958c1e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24ef09bd",
+   "id": "a7a584ba",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41b9be7",
+   "id": "52284736",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3803005d",
+   "id": "b34c98cc",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "905fa1a6",
+   "id": "3a903495",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ff9f7bd",
+   "id": "081c0067",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97b88a5c",
+   "id": "fecb7b9b",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952cf95c",
+   "id": "9d9cc1c7",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60894713",
+   "id": "257b2846",
    "metadata": {
     "hide-output": false
    },
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6aa10e7",
+   "id": "9580031f",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3fd36232",
+   "id": "0b6068c0",
    "metadata": {
     "hide-output": false
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36efab8e",
+   "id": "1dfa480d",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc09da31",
+   "id": "285a9810",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0965f787",
+   "id": "cf754722",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d792d5a4",
+   "id": "4a229934",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fda65d8",
+   "id": "46783d14",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5392f29",
+   "id": "863896d8",
    "metadata": {
     "hide-output": false
    },
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "840d0834",
+   "id": "d32c08a2",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6ee3385",
+   "id": "bb75c6e6",
    "metadata": {
     "hide-output": false
    },
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34396e1b",
+   "id": "8730a6fc",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6fae74d",
+   "id": "d800e3e2",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4202d120",
+   "id": "b7251385",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7e0796",
+   "id": "4a104469",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e59eca4",
+   "id": "06a2b62e",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6cb26ee",
+   "id": "a09d06d0",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09832b7d",
+   "id": "4a010937",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07cb3192",
+   "id": "d746c006",
    "metadata": {
     "hide-output": false
    },
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79965fd3",
+   "id": "491c7bc2",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -678,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55df8860",
+   "id": "6828c2c0",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36a009b8",
+   "id": "8d20e1f5",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9af1d93",
+   "id": "c76f4222",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2401ecc8",
+   "id": "d8f9a7bc",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d34b7dea",
+   "id": "07b0034d",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71ea41ac",
+   "id": "bb2898d4",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -929,7 +929,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fa51cd6",
+   "id": "18056e5f",
    "metadata": {
     "hide-output": false
    },
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27f21afc",
+   "id": "a9be91fb",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -983,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "531d7a81",
+   "id": "e1a09a12",
    "metadata": {
     "hide-output": false
    },
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38c35156",
+   "id": "eee57268",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0969a236",
+   "id": "f101e527",
    "metadata": {
     "hide-output": false
    },
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21da2ae0",
+   "id": "21eea8de",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1073,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e50e50f5",
+   "id": "24abcf7a",
    "metadata": {
     "hide-output": false
    },
@@ -1085,7 +1085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "440c3001",
+   "id": "d91de60a",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceef914e",
+   "id": "56ea9459",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0196a767",
+   "id": "2ffe090b",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cea588d",
+   "id": "628f5279",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "886a79a6",
+   "id": "ae499693",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9813c111",
+   "id": "f22bb371",
    "metadata": {
     "hide-output": false
    },
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5414951",
+   "id": "d8ec7a60",
    "metadata": {
     "hide-output": false
    },
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db560563",
+   "id": "a8e31e22",
    "metadata": {
     "hide-output": false
    },
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb99b2be",
+   "id": "e59ddb57",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1203,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "620ab0e2",
+   "id": "8793d1bf",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16e1bef3",
+   "id": "bb69e377",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbd8ade0",
+   "id": "2ccffcf9",
    "metadata": {
     "hide-output": false
    },
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c26ca27f",
+   "id": "3cac88f7",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1278,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d1dbdce",
+   "id": "bac7e230",
    "metadata": {
     "hide-output": false
    },
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0661b6",
+   "id": "bcbce9fe",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd3f923f",
+   "id": "a6970a82",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a528fa50",
+   "id": "ceab9a0f",
    "metadata": {
     "hide-output": false
    },
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c0c120e",
+   "id": "8d08e0fb",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1362,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4538978d",
+   "id": "34bd5d5c",
    "metadata": {
     "hide-output": false
    },
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5933dc0",
+   "id": "e21a2c31",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1385,7 +1385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1aa12921",
+   "id": "a35837c6",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12fc3f1",
+   "id": "cbb63691",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76b0949e",
+   "id": "f86b27da",
    "metadata": {
     "hide-output": false
    },
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5243911e",
+   "id": "49bc3c80",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1428,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ca8c938",
+   "id": "ca73a9b0",
    "metadata": {
     "hide-output": false
    },
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a891c85d",
+   "id": "334740ef",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1458,7 +1458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d043faf2",
+   "id": "cf01aa8b",
    "metadata": {
     "hide-output": false
    },
@@ -1486,7 +1486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de333c4",
+   "id": "ab162d47",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1496,7 +1496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "027555bf",
+   "id": "eb0e6c83",
    "metadata": {
     "hide-output": false
    },
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32167211",
+   "id": "4f2f3fcb",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "592585d3",
+   "id": "1fd0e516",
    "metadata": {
     "hide-output": false
    },
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb132ef5",
+   "id": "fced2c9b",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1548,7 +1548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22f7ba9e",
+   "id": "f5b49a50",
    "metadata": {
     "hide-output": false
    },
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f059469",
+   "id": "6be6a640",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1571,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fe5eac6",
+   "id": "71fc8ee5",
    "metadata": {
     "hide-output": false
    },
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2153f8b7",
+   "id": "2791989e",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1594,7 +1594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f5d375",
+   "id": "9b50adf2",
    "metadata": {
     "hide-output": false
    },
@@ -1605,7 +1605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39830971",
+   "id": "a666a342",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1614,7 +1614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fdcd0ad",
+   "id": "dcca7b87",
    "metadata": {
     "hide-output": false
    },
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc695d41",
+   "id": "1c344ad8",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1636,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43a2323d",
+   "id": "ca598b92",
    "metadata": {
     "hide-output": false
    },
@@ -1653,7 +1653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59decffd",
+   "id": "9300982d",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1664,7 +1664,7 @@
   }
  ],
  "metadata": {
-  "date": 1764839050.761737,
+  "date": 1764848030.8329577,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
