--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0f09c754",
+   "id": "dc0f2fa4",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ea05fe",
+   "id": "81494dcf",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8873e4c",
+   "id": "72dd129d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fdb7e1c",
+   "id": "6a364c3f",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90400a17",
+   "id": "0c9f240e",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a8cc2db",
+   "id": "d10ae61b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f919bdd",
+   "id": "0b717121",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19d49cf2",
+   "id": "6218c625",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cfa413f",
+   "id": "2c6a3276",
    "metadata": {
     "hide-output": false
    },
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90f4544d",
+   "id": "4f607dae",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b1f2bb3",
+   "id": "29004011",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d208e4a5",
+   "id": "888cb1ff",
    "metadata": {
     "hide-output": false
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1d42958",
+   "id": "c6450a25",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "007a79f4",
+   "id": "f9fd1955",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10e461a6",
+   "id": "d47f6e10",
    "metadata": {
     "hide-output": false
    },
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5b9750f",
+   "id": "db7e7273",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1174fdb",
+   "id": "ad4ee209",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebfaeb92",
+   "id": "e80201aa",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "757c0393",
+   "id": "55b16025",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdbc3984",
+   "id": "26e3da65",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6995ca47",
+   "id": "9f4ad25a",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccc0049e",
+   "id": "62ea994d",
    "metadata": {
     "hide-output": false
    },
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f919286",
+   "id": "1d54cc45",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa37b56b",
+   "id": "88b718e3",
    "metadata": {
     "hide-output": false
    },
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9f17667",
+   "id": "af7fb2e4",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "575b06c3",
+   "id": "70015488",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daadbd83",
+   "id": "f15001eb",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44574c9",
+   "id": "7086e1d4",
    "metadata": {
     "hide-output": false
    },
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb59955b",
+   "id": "af25df63",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -488,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc25640f",
+   "id": "cba9941c",
    "metadata": {
     "hide-output": false
    },
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25f0ae1a",
+   "id": "4050f0f5",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -517,7 +517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "216e2966",
+   "id": "d288dbbe",
    "metadata": {
     "hide-output": false
    },
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9833df9d",
+   "id": "bf021bc5",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbedaf47",
+   "id": "8960104d",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b20cfea",
+   "id": "440a6a6f",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd124ef6",
+   "id": "5213a377",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -609,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "186e4db6",
+   "id": "be63a56e",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "949996f2",
+   "id": "aa2699c2",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54afda95",
+   "id": "ecd26cc6",
    "metadata": {
     "hide-output": false
    },
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8554588",
+   "id": "6c44d369",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -654,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3f66e8",
+   "id": "afaec5b6",
    "metadata": {
     "hide-output": false
    },
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6422ccd1",
+   "id": "32b4d494",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -674,7 +674,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "266c0f9e",
+   "id": "e432aeca",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c6e3944",
+   "id": "0040904f",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9133703f",
+   "id": "98c75256",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f27808c8",
+   "id": "c0ec45b5",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -723,7 +723,7 @@
   }
  ],
  "metadata": {
-  "date": 1764839050.7916288,
+  "date": 1764848030.862438,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
