--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90df43c7",
+   "id": "c8e5668e",
    "metadata": {},
    "source": [
     "$$\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bbf7e24",
+   "id": "381e3545",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "932509ca",
+   "id": "5336ef85",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9595dda",
+   "id": "cf6659df",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2365842d",
+   "id": "380a7868",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d54bdc1",
+   "id": "59eed3da",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab44e21b",
+   "id": "2f6b9ec5",
    "metadata": {
     "hide-output": false
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f64f953",
+   "id": "dd9718f0",
    "metadata": {},
    "source": [
     "## The Model"
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c21303d",
+   "id": "9dc7783b",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59f145ba",
+   "id": "e2f0e308",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -189,7 +189,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-b56d010d-2130-4bf5-93ab-e6bf72327164'></a>\n",
+    "<a id='equation-a50a9b15-6041-4d13-8bf6-816e11c5c571'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -202,7 +202,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-71993559-1e4b-47c5-b1ba-f558c4212c9f'></a>\n",
+    "<a id='equation-89e211c7-fe18-44c4-b4b3-85c12b62c4b6'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d43afee7",
+   "id": "7fbe30a3",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -256,7 +256,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-93cf2ed7-8518-4d57-b433-96c4f0622f81'></a>\n",
+    "<a id='equation-d8416402-2925-48e6-baf2-3657baa14232'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -266,7 +266,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-1705f22d-1b57-4361-8ac0-9dbee2a1eadf'></a>\n",
+    "<a id='equation-adb9687a-59a4-4e8d-bf19-726cce1794a3'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -280,7 +280,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-31622254-3640-47bc-bd6c-374fa10f9a33'></a>\n",
+    "<a id='equation-e281557a-e05b-47c5-9311-74afe42c3c14'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -290,7 +290,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-4e50c6bb-4642-4db3-bb19-5ded709dd8cf'></a>\n",
+    "<a id='equation-d34c30e6-4f0f-4f43-864f-0844d30033d7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0fa7258",
+   "id": "85a3e6e7",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -315,7 +315,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-42b55625-e980-4c63-ac77-f3e123be1719'></a>\n",
+    "<a id='equation-84091094-d3db-4f1f-a334-39bb3b5d0d57'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -327,7 +327,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-be72d3d7-26a3-4cd8-b634-76bf4e913990'></a>\n",
+    "<a id='equation-bf0b5872-1c9d-48f8-ace1-e3066b195386'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "240db3ba",
+   "id": "657768e5",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0690968e",
+   "id": "5f425d0c",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24ef2a94",
+   "id": "1c0dd13c",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f6e4056",
+   "id": "9b42f52a",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -420,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19a02fa7",
+   "id": "4c849a13",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61455bb2",
+   "id": "0cc61f10",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71aacb69",
+   "id": "00015a24",
    "metadata": {
     "hide-output": false
    },
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605930b4",
+   "id": "133f77da",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcea6216",
+   "id": "461cb8fe",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1223d7e",
+   "id": "55ebfd20",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "542366bc",
+   "id": "b6446cd9",
    "metadata": {
     "hide-output": false
    },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018de403",
+   "id": "e28dcfb6",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addfe950",
+   "id": "aa2d8103",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9266f761",
+   "id": "85ed9b66",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65119dd",
+   "id": "a36a5586",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "616c9513",
+   "id": "f94623bc",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd95505",
+   "id": "ff8ac632",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -647,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a31c560",
+   "id": "7125624c",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f21f57aa",
+   "id": "71da00eb",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8597abfc",
+   "id": "ae5f2915",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9dec7f8",
+   "id": "7da6b8d6",
    "metadata": {
     "hide-output": false
    },
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60fd6de0",
+   "id": "3958df5f",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -724,7 +724,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b12b63f",
+   "id": "ef2af38f",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ee0dc20",
+   "id": "3bc0cdd1",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d32089b",
+   "id": "2ee95f40",
    "metadata": {
     "hide-output": false
    },
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "037a50e8",
+   "id": "314a9645",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d82b6d7",
+   "id": "1d331178",
    "metadata": {
     "hide-output": false
    },
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4c1e4b",
+   "id": "7b220780",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef466585",
+   "id": "cd52ece7",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f116d941",
+   "id": "f8428bf0",
    "metadata": {
     "hide-output": false
    },
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5a7c546",
+   "id": "eeaa2027",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "169fd5e5",
+   "id": "97e0469b",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eda3cbb4",
+   "id": "c618979d",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c16973d1",
+   "id": "7633ba43",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -963,7 +963,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cd360e6",
+   "id": "605df3d6",
    "metadata": {
     "hide-output": false
    },
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb84a7a",
+   "id": "541cf585",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d50fad2",
+   "id": "5f96b3f9",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54d4a312",
+   "id": "54f80519",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb41388e",
+   "id": "902d7fb8",
    "metadata": {
     "hide-output": false
    },
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "511b8b0f",
+   "id": "f167c563",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e807fc3",
+   "id": "cc5467fc",
    "metadata": {
     "hide-output": false
    },
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b25378",
+   "id": "ecbf2a0c",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7da95208",
+   "id": "77610167",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4a8184",
+   "id": "55731416",
    "metadata": {
     "hide-output": false
    },
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6345c0d1",
+   "id": "0fc0f08c",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ceb71b66",
+   "id": "bbf98ee4",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39af7a80",
+   "id": "b451ebda",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1118,7 +1118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a323a9f9",
+   "id": "b1ab96d5",
    "metadata": {
     "hide-output": false
    },
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe719433",
+   "id": "d3d393c7",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f65fa2ee",
+   "id": "ae5ed3cb",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "389c513f",
+   "id": "7ab91195",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1163,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0a93925",
+   "id": "7c9acad7",
    "metadata": {
     "hide-output": false
    },
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "454e80b2",
+   "id": "e69c44e9",
    "metadata": {
     "hide-output": false
    },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95218df0",
+   "id": "10d2e6bf",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1243,7 +1243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b189204",
+   "id": "d625991d",
    "metadata": {
     "hide-output": false
    },
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2533cbf",
+   "id": "935c92a7",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1269,7 +1269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fddce29",
+   "id": "cf9dac27",
    "metadata": {
     "hide-output": false
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4758dc7c",
+   "id": "28b94b27",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96a45fe",
+   "id": "7f4de1cc",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1313,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b09122e7",
+   "id": "2ae6eb77",
    "metadata": {
     "hide-output": false
    },
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9af272ac",
+   "id": "95c5deab",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1338,7 +1338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e1bfdd",
+   "id": "bd7b2d93",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "547d1753",
+   "id": "5f102bee",
    "metadata": {
     "hide-output": false
    },
@@ -1363,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfd09f58",
+   "id": "4918bc9b",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1373,7 +1373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e75d38e",
+   "id": "439f1ddd",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1388,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f948fdf",
+   "id": "b6d8dab0",
    "metadata": {
     "hide-output": false
    },
@@ -1399,7 +1399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "720b9f5f",
+   "id": "da57dd9d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1408,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6256cdae",
+   "id": "a266b698",
    "metadata": {
     "hide-output": false
    },
@@ -1432,7 +1432,7 @@
   }
  ],
  "metadata": {
-  "date": 1764839050.357887,
+  "date": 1764848030.4326043,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
